# opsec_sentinel_ai

./: README.md  pyproject.toml  setup.py
docs/: ARCHITECTURE.md
opsec_sentinel_ai/: __init__.py  __main__.py
opsec_sentinel_ai/ai/: analyzer.py
opsec_sentinel_ai/analysis/: __init__.py  attack_simulator.py  behavioral.py  modes.py  visualization.py
opsec_sentinel_ai/cli/: app.py
opsec_sentinel_ai/config/: loader.py  settings.py
opsec_sentinel_ai/core/: collector.py  context.py  engine.py  models.py  plugin.py
opsec_sentinel_ai/monitoring/: __init__.py  daemon.py
opsec_sentinel_ai/plugins/: registry.py  runtime.py
opsec_sentinel_ai/plugins/behavioral/: timing_anomaly.py
opsec_sentinel_ai/plugins/browser/: canvas_entropy.py  utils.py  webgl_fingerprint.py  webrtc_leak.py
opsec_sentinel_ai/plugins/environment/: sandbox_vm.py
opsec_sentinel_ai/plugins/fingerprint/: consistency.py  entropy_score.py  header_consistency.py  timezone_ip.py
opsec_sentinel_ai/plugins/network/: dns_leak.py  ipv6_exposure.py  proxy_env.py  tor_check.py
opsec_sentinel_ai/plugins/recon/: external_surface.py
opsec_sentinel_ai/plugins/system/: open_ports.py  ssh_audit.py  suspicious_processes.py
opsec_sentinel_ai/reporting/: html_report.py  markdown_report.py  pdf_export.py  scoring.py
opsec_sentinel_ai/utils/: entropy.py  logging.py  net.py  time.py
tests/: test_advanced_analysis.py  test_reporting.py  test_smoke.py
